# django-single-session

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  single_session
.github/: FUNDING.yml
.github/workflows/: django-single-session-ci.yml
docs/source/: admin_actions.rst  api_admin.rst  api_apps.rst  api_models.rst  api_signals.rst  conf.py  getting_started.rst  index.rst  installation.rst  settings.py
single_session/: __init__.py  admin.py  apps.py  models.py  signals.py  tests.py
single_session/locale/nl/LC_MESSAGES/: django.mo  django.po
single_session/migrations/: 0001_initial.py
